[tool.poetry]
name = "tracking_model"
version = "0.1.0"
description = ""
authors = ["Adriel Martins <adrielfalcao@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.2"
numpy = "^1.21.2"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
cvxopt = "^1.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
