[tool.poetry]
name = "tracking_model"
version = "0.1.2"
description = "Genetic Algorithm Optimization for the Index-Tracking problem."
authors = ["Adriel Martins <adrielfalcao@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.2"
numpy = "^1.21.2"
cvxopt = "^1.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
